Begin implementing error code system

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                   </div>
               </section>
           </article>
-          <button id="data">Start Transfer</button>
+          <button id="begin">Start Transfer</button>
       </div>
 
       <script>
