Made upload work... Still buggy. Added file logging

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                   </div>
               </section>
           </article>
-          <button id="begin">Start Transfer</button>
+          <button id="begin"><h1>Start Transfer</h1></button>
       </div>
 
       <script>
