--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
   <body>
       <div class="container">
+          <div id="content">
           <article>
               <section>
                   <div class="header"> 
@@ -41,6 +42,7 @@
               </section>
           </article>
           <button id="begin"><h1>Start Transfer</h1></button>
+          </div>
       </div>
 
       <script>
