Makes the working directories if the don't exist

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
           </div>
       </div>
 
+      <div id="progress-bar">
+          <div id="progress"><p>downloading...</p></div>
+      </div>
+
       <script>
       require('./app.js')
       </script>
