Bug fixes, Download Bar added

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
       </div>
 
       <div id="progress-bar">
-          <div id="progress"><p>downloading...</p></div>
+          <div id="progress"><p></p></div>
       </div>
 
       <script>
-      require('./app.js')
+      require('./app.js') 
       </script>
   </body>
 </html>
