added full time reporting, individual time reporting may be added at some point

--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
 
   <body>
       <div class="container">
-            <div id="settings-container"><i class="fas fa-sliders-h"></i></div>
+        <div id="settings-container"><i class="fas fa-sliders-h"></i></div>
           <div id="content">
-          <article>
-              <section>
                   <div class="header"> 
                           <h1>Service Uploader</h1> 
                   </div>
@@ -27,21 +25,18 @@
                   <input type="text" id="speakerInitials" required placeholder="Speaker Initials"><br>
                   <table class="radio-table">
                         <tr>
-                                <td><input type="radio" name="demo" value="AM" class="form-radio" ><label for="radio-one">AM</label></td>
-                  
-                                <td><input type="radio" name="demo" value="PM" class="form-radio" ><label for="radio-one">PM</label></td>
+                            <td><input type="radio" name="demo" value="AM" class="form-radio" ><label for="radio-one">AM</label></td>
+                            <td><input type="radio" name="demo" value="PM" class="form-radio" ><label for="radio-one">PM</label></td>
                           </tr>
            
                   </table>
                   </div>
-              </section>
-          </article>
-          <button id="begin"><h1>Start Transfer</h1></button>
+            <button id="begin"><h1>Start Transfer</h1></button>
           </div>
       </div>
 
       <div id="progress-bar">
-          <div id="progress"><ul><li id="name"></li><li id="percent"></li></ul></div>
+          <div id="progress"><p id="name"><p id="percent"></p></div>
 
       </div>
 
