--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
   <!--Progress Bar-->
   <div id="progress-bar">
-      <div id="progress"><p id="name"><p id="percent"></p></div>
+      <p id="name"><p id="percent"></p>
+      <div id="progress"></div>
   </div>
 
   <!--Settings-->
